fix: removed nulls from jsonschema
